UI: fix featured image overflow on default element

--- a/media/items.less
+++ b/media/items.less
@@ -102,6 +102,10 @@
 		position: relative;
 		overflow: hidden;
 
+		> .ct-featured_image{
+		  overflow: hidden;
+		}
+
 		.ct-item_info{
 			position: relative;
 			padding: 10px;
